Added v1 of settings tab for changing automation binds and template messages. In addition, refactored files so it is more organized within the codebase.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,14 @@
 {
     "width": 500,
     "height_percentage": 0.9,
-    "onboarding_completed": false
+    "onboarding_completed": false,
+    "keybindings": [
+        {
+            "name": "Default",
+            "keys": ["Shift", "Control/Meta"],
+            "question_template": "Can you explain this to me:\nQuestion:\n{question}",
+            "answer_template": "Can you explain this to me:\nQuestion:\n{question}\n\nAnswer:\n{answer}"
+        }
+    ]
 }
 
