Update addon name to OpenEvidence AI and improve README documentation

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "package": "openevidence_ai",
-    "name": "OpenEvidence Panel",
-    "mod": 1766683571,
+    "name": "OpenEvidence AI",
+    "mod": 1766692710,
     "conflicts": []
 }
