Added some analytics for tracking usage and how many times user has used application

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "package": "openevidence_ai",
-    "name": "OpenEvidence AI",
+    "package": "ai_panel",
+    "name": "AI Panel",
     "mod": 1766692710,
     "conflicts": []
 }
